<resources>
    <string name="app_name">Trippy</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_up">You don\'t have an account? Sign Up</string>
    <string name="title_activity_main">Trippy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="my_fav_tours">My Favourite Tours</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="notifications">Notifications</string>
    <string name="about_section">About Trippy</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>

    <string name="facebook_app_id">431229680419878</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_sortBy">Sort By</string>
    <string-array name="pref_tourtype_list_titles">
        <item>Newer Tours</item>
        <item>Best Rated First</item>
        <item>No order</item>
    </string-array>

    <string-array name="pref_category_list_titles">
        <item>Nightlife</item>
        <item>Sightseeing</item>
        <item>Show</item>
        <item>Food/Drinks</item>
    </string-array>

    <string-array name="pref_ranking_list_titles">
        <item>More than 3 stars</item>
        <item>All tours</item>
    </string-array>

    <string-array name="pref_values_location_titles">
        <item>La Boca</item>
        <item>Puerto Madero</item>
        <item>San Telmo</item>
        <item>Palermo</item>
        <item>All</item>
    </string-array>

    <string-array name="pref_values_duration_titles">
        <item>1 hour</item>
        <item>Less than 3 hours</item>
        <item>Half day</item>
        <item>All day</item>
    </string-array>

    <string-array name="pref_duration_list_titles">
        <item>1 hour</item>
        <item>Less than 3 hours</item>
        <item>Half Day</item>
        <item>All day</item>
    </string-array>

    <string-array name="pref_location_list_titles">
        <item>La Boca</item>
        <item>Puerto Madero</item>
        <item>San Telmo</item>
        <item>Palermo</item>
        <item>All</item>
    </string-array>


    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="sorting">Sorting</string>
    <string name="available_preferences">Available</string>
    <string name="pref_title_ranking">Rating</string>
    <string name="pref_title_category">Category</string>
    <string name="pref_title_duration">Duration</string>
    <string name="pref_title_location">Location</string>
    <string name="pref_title_weatherFriendly">Weather: Rainy friend tours</string>
    <string name="action_filter">Refine</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="title_activity_sign_in">SignInActivity</string>
</resources>
