<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <group android:checkableBehavior="single"
        android:id="@+id/menu_user">
        <item
            android:id="@+id/nav_tours"
            android:icon="@drawable/favourite_tours"
            android:title="@string/my_fav_tours"
            />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/invite_friends"
            android:title="@string/invite_friends" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/notifications"
            android:title="@string/notifications" />

    </group>


    <group android:checkableBehavior="single"
        android:id="@+id/menu_trippy">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/about_section" />
        <item
            android:id="@+id/nav_feedback"
            android:title="@string/send_feedback"
            android:icon="@drawable/feedback"/>
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help"
            android:title="@string/help" />

    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/menu_logout">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout"/>

    </group>


</menu>
